fix settings i81n bug

--- a/view/layout/header.html
+++ b/view/layout/header.html
@@ -52,6 +52,7 @@
                         <li><a class="dropdown-item py-2" href="#" onclick="changeLanguage('ja-JP')">🇯🇵 日本語</a></li>
                         <li><a class="dropdown-item py-2" href="#" onclick="changeLanguage('en-US')">🇺🇸 English</a></li>
                         <li><a class="dropdown-item py-2" href="#" onclick="changeLanguage('ru-RU')">🇷🇺 Русский</a></li>
+                        <li><a class="dropdown-item py-2" href="#" onclick="changeLanguage('ko-KR')">🇰🇷 한국어</a></li>
                     </ul>
                 </li>
             </ul>
