--- a/view/home/index.html
+++ b/view/home/index.html
@@ -160,6 +160,11 @@
                         </h5>
                         <div>
                             <span class="text-muted" id="searchResultInfo"></span>
+                            {{ if gt .TotalArticles 20 }}
+                            <a href="/articles" class="btn btn-sm btn-outline-info ms-2">
+                                <i class="bi bi-list-ul"></i> <span data-i18n="home.view.all.articles">查看全部文章</span>
+                            </a>
+                            {{ end }}
                             <button class="btn btn-sm btn-outline-primary ms-2" onclick="refreshArticles()">
                                 <i class="bi bi-arrow-clockwise"></i> <span data-i18n="home.refresh">刷新</span>
                             </button>
